# aideml_rl

./: .gitignore  README.md  kaggle_data_test.ipynb  main.py  new_plan.md  openai_test.ipynb  plx_exemplo_minimal.yaml  pyproject.toml  requirements.txt
aide/: __init__.py  agent.py  controller.py  controller_trace.py  env_loader.py  journal.py  policy.py  run.py
aide/backend/: __init__.py  backend_openai.py
aide/eval/: __init__.py  grade.py  manifest.py  mlebench_task.py  (+1 more)
data/: ctu_datasets_info.csv  data_utils.py  download_datasets.py  heuristic_runs_index.csv  hf_utils.py  kaggle_datasets_info.csv  offline_eval_smoke.csv
polyaxon/: AIDE_HEURISTIC.md  GUIA.md  plx_aide_eval_baseline_matrix.yaml  plx_aide_eval_gcp.yaml  plx_aide_heuristic_gcp.yaml  plx_aide_heuristic_kaggle_matrix.yaml  plx_aide_heuristic_matrix.yaml  plx_exemplo_ablation.yaml  plx_exemplo_gcp.yaml  plx_exemplo_minimal.yaml  plx_exemplo_nebius.yaml  plx_gcs_check_gcp.yaml  plx_hf_check_gcp.yaml  plx_rlhf_probe_axia.yaml  plx_rlhf_smoke_axia.yaml  polyaxon-config-generator.md
scripts/: batch_run_heuristic.py  check_gcs_connection.py  check_hf_connection.py  compare_hint_runs.py  download_runs_hf.py  eval_dpo_all.sh  eval_dpo_vllm.sh  evaluate_policy_offline.py  export_hint_controller_data.py  export_rlhf_data.py  inspect_hint_data.py  plot_tokens_vs_metric.py  prepare_grpo_data.py  prepare_sft_data.py  run_eval.py  smoke_test_dpo_wiring.py  test_agent_instance.py  upload_ctu_to_hf.py  upload_heuristic_logs_to_gcs.py  upload_heuristic_logs_to_hf.py  upload_kaggle_to_hf.py  upload_model_to_hf.py
(+39 files in other folders)
